service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node
  name: node
  namespace: lucas
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: node
