ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node
spec:
  defaultBackend:
    service:
      name: node
      port:
        number: 80
